# ipython_memory_usage

./: LICENSE.txt  README.md  ipython_memory_usage.py  ipython_memory_usage_perf.py  perf_process.py  pyproject.toml  setup.py  setupOLD.py
recipe/: README.md  meta.yaml
src/ipython_memory_usage/: __init__.py  ipython_memory_usage.py  perf_process.py
src/ipython_memory_usage/examples/: example_usage_np_pd.ipynb
